tests/e2e/semantics/head_const_output6.error
Error: syntax error in story at line 2, column 14

2|           foo = res["foo"]
                   ^^^^^^^^^

E0104: `Object` can't be indexed with `foo` of type `string`
