tests/e2e/semantics/head_const_output6.story
when http server listen method:"post" path:"/foo" as res
       foo = res["foo"]
       foo = 2
